<resources>
    <string name="app_name">Lost2Found</string>
    <string name="login_button_text">Entrar</string>
    <string name="register_button_text">¡Regístrate!</string>
    <string name="place_button_text">Lugar</string>
    <string name="image_button_text">Imagen</string>
    <string name="color_button_text">Color</string>
    <string name="trasnport_place_button_text">Lugar de transporte</string>
    <string name="underground_transport_button_text">Metro</string>
    <string name="transport_title_text">Lugar de transporte</string>
    <string name="concrete_title_text">Lugar concreto</string>
    <string name="bus_transport_button_text">Autobús</string>
    <string name="train_transport_button_text">Tren</string>
    <string name="airport_transport_button_text">Aeropuerto</string>
    <string name="map_button_text">Mapa</string>
    <string name="concrete_place_button_text">Dirección concreta</string>
    <string name="create_button_text">Crear</string>
    <string name="image_description">Imagen objeto</string>
    <string name="next2_button_text">Continuar</string>
    <string name="confirm_button_text">Confirmar</string>
    <string name="next_button_text">Siguiente</string>
    <string name="contact_button_text">Contactar</string>
    <string name="rate_button_text">Puntuar</string>
    <string name="contact_text">Contactar con</string>
    <string name="select_button_text">Seleccionar</string>
    <string name="spinner_placeholder">Categoria</string>
    <string name="spinner2_placeholder">Tipo Anuncio</string>
    <string name="spinner3_placeholder">Color</string>
    <string name="spinner4_placeholder">Línea</string>
    <string name="spinner5_placeholder">Estación</string>
    <string name="spinner6_placeholder">Tipo</string>
    <string name="delete">Eliminar</string>
    <string name="color_dialog_title">Elige un color</string>
    <string name="create_announce_text">Crear nuevo anuncio</string>
    <string name="location_text">Ubicación</string>
    <string name="new_announce_text">Nuevo anuncio</string>
    <string name="date_announce_text">Día</string>
    <string name="hour_announce_text">Hora</string>
    <string name="image_upload_text">Subir imagen</string>
    <string name="info_announce_text">+ Info</string>
    <string name="config_text">Configuración</string>
    <string name="contact_text2">Contáctanos!</string>
    <string name="about_us_text">Sobre nosotros</string>
    <string name="help_text">Ayuda</string>
    <string name="new_name">Introduce tu nuevo nombre:</string>
    <string name="new_email">Introduce tu nuevo email:</string>
    <string name="new_pass">Introduce tu nueva contraseña:</string>
    <string name="seeker_error">No hay objetos que cumplan con tus requisitos</string>
    <string name="me_text">Yo</string>
    <string name="rate_text">Valóranos!</string>
    <string name="error_txt1">Email o contraseña incorrectos</string>
    <string name="error_txt2">Introduce la linea y la estacion</string>
    <string name="error_txt3">Completa los campos necesarios</string>
    <string name="error_txt4">Combinación no valida</string>
    <string name="error_txt5">Selecciona la categoría y el tipo de anuncio</string>
    <string name="info_txt">¿Todavía no has creado ningún anuncio?\n\n¡Pulsa en el botón (+) y hazlo ya!</string>
    <string name="info_txt2">"De momento no hay objetos similares en nuestra aplicación. Prueba más tarde."</string>
    <string name="info_txt3">¿Todavía no tienes ningún chat?\n\n¡Pulsa en contactar cuando tengas un match y crea uno!</string>
    <string name="info_txt4">No podemos cargar el contenido, revisa tu conexion a internet</string>
    <string name="title_announce_section">Mis anuncios</string>
    <string name="title_chat_section">Mis chats</string>
    <string name="title_chatconcrete_section">Chat con </string>
    <string name="title_matchannounce_section">Anuncios match</string>
    <string name="title_matchannounce_info">Información anuncio</string>
    <string name="title_typeplace_section">Escoge un lugar</string>
    <string name="title_transrport_typeplace_section">Tipos de lugar de transporte</string>
    <string name="email_textloginregister">Email</string>
    <string name="brand_text">Marca</string>
    <string name="documents_text">Documentacion</string>
    <string name="street_text">Calle</string>
    <string name="number_text">Numero</string>
    <string name="postalcode_text">Codigo Postal</string>
    <string name="model_text">Modelo</string>
    <string name="tara_text">Tara</string>
    <string name="IMEI_text">IMEI</string>
    <string name="color_text">Color</string>
    <string name="bank_text">Banco</string>
    <string name="owner_text">Propietario tarjeta</string>
    <string name="name_text">Nombre objeto</string>
    <string name="description_text">Descripcion</string>
    <string name="fill_help1">Especifique la linea y estacion donde ha perdido o encontrado el objeto</string>
    <string name="fill_help2">"Linea 2"</string>
    <string name="fill_help3">"Santo Domingo"</string>
    <string name="fill_help4">"149"</string>
    <string name="fill_help5">"Fuencarral Glorieta Quevedo"</string>
    <string name="line_text">Linea</string>
    <string name="station_text">Estacion</string>
    <string name="pass_textloginregister">Contraseña</string>
    <string name="noaccount_textlogin">¿No tienes cuenta?</string>
    <string name="name_textregister">Nombre</string>
    <string name="passagain_textregister">Vuelve a escribir la contraseña</string>
    <string name="alreadyhaveaccount">Ya tengo cuenta</string>
    <string name="writemsg_chat">Escribe tu mensaje</string>
    <string name="nav_title_section1">Anuncios</string>
    <string name="nav_title_section2">Búsqueda</string>
    <string name="nav_title_section3">Chats</string>
    <string name="nav_title_section4">Open Data</string>
    <string name="nav_title_section5">Configuración</string>
    <string name="nav_title_section6">Cerrar sesión</string>
    <string name="nav_title_section7">Contacto</string>
    <string name="nav_title_section8">Sobre nosotros</string>
    <string name="nav_title_section9">Ayuda</string>
    <string name="nav_title_section10">Valoración</string>
    <string name="nav_header_text1">User name</string>
    <string name="nav_header_text2">User email</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="match1">Buscar coincidencias</string>
    <string name="match2">Open Data</string>
    <string name="chat_text">Escribir mensaje</string>
    <string name="chat_button">Enviar</string>

    <string name="settings_button1">Cambiar email</string>
    <string name="settings_button2">Cambiar nombre</string>
    <string name="settings_button3">Cambiar contraseña</string>
    <string name="settings_text">Puedes cambiar en cualquier momento tu nombre, tu email y tu contraseña</string>
</resources>
