<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_announce"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".lost2foundUI.announceUI.NewAnnounceActivity"
        tools:showIn="@layout/activity_new_announce"
        android:orientation="vertical"
        android:background="@color/colorSecondaryText">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar_center"
            android:orientation="vertical">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/announce_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/spinner2_placeholder"
                android:textColorHint="@color/colorPrimaryText"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/announce_type"
                android:layout_marginEnd="96dp"
                android:layout_marginTop="21dp"
                android:background="@color/colorPrimary"
                android:calendarViewShown="true"
                android:datePickerMode="spinner"
                android:onClick="showDatePickerDialog"
                android:text="@string/date_announce_text"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/date_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/date_button"
                android:layout_alignBottom="@+id/date_button"
                android:layout_alignStart="@+id/hour_show"
                android:layout_alignEnd="@+id/listCategories"
                android:textAlignment="center"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/hour_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/date_button"
                android:layout_below="@+id/date_button"
                android:layout_marginTop="17dp"
                android:background="@color/colorPrimary"
                android:calendarViewShown="true"
                android:onClick="showTimePickerDialog"
                android:text="@string/hour_announce_text"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp"
                android:timePickerMode="spinner" />

            <EditText
                android:id="@+id/hour_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/hour_button"
                android:layout_alignBottom="@+id/hour_button"
                android:layout_alignEnd="@+id/listCategories"
                android:textAlignment="center"
                android:layout_marginEnd="8dp" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/listCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/hour_button"
                android:layout_marginTop="22dp"
                android:hint="@string/spinner_placeholder"
                android:textColorHint="@color/colorPrimaryText"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/place_button"
                style="@style/buttonStyle"
                android:layout_below="@id/listCategories"
                android:layout_marginTop="15dp"
                android:onClick="place"
                android:text="@string/place_button_text" />

            <Button
                android:id="@+id/upload_image"
                style="@style/buttonStyle"
                android:layout_below="@id/place_button"
                android:layout_marginTop="15dp"
                android:text="@string/image_upload_text" />
            <!--android:onClick="place"-->

            <Button
                android:id="@+id/register_button"
                style="@style/buttonStyle"
                android:layout_below="@id/upload_image"
                android:layout_marginTop="35dp"
                android:text="@string/announce_button_text" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>