<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_place"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".lost2foundUI."
        tools:showIn="@layout/activity_place"
        android:background="@color/colorSecondaryText">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipos de lugar"
            android:theme="@style/ToolbarStyle">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar_center"
            android:orientation="vertical">

            <Button
                android:id="@+id/transport_place_button"
                style="@style/buttonStyle"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="51dp"
                android:onClick="transportPlace"
                android:text="@string/trasnport_place_button_text" />


            <Button
                android:id="@+id/map_button"
                style="@style/buttonStyle"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/transport_place_button"
                android:layout_marginTop="76dp"
                android:text="@string/map_button_text" />
            <!--android:onClick="place"-->

            <Button
                android:id="@+id/concrete_dir_button"
                style="@style/buttonStyle"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/map_button"
                android:layout_marginTop="69dp"
                android:text="@string/concrete_place_button_text" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>