<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_place"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".lost2foundUI.placeUI.transportUI.TransportPlaceActivity"
        tools:showIn="@layout/activity_fill_transport_place"
        android:background="@color/colorSecondaryText">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipos de lugar"
            android:theme="@style/ToolbarStyle">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/transportPlace_layout"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar_center"
            android:orientation="vertical">

            <Button
                android:id="@+id/metro_transport_place_button"
                style="@style/buttonStyle"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="80dp"
                android:onClick="saveMetroClicked"
                android:text="@string/underground_transport_button_text" />
            <!--android:onClick="place"-->

            <Button
                android:id="@+id/bus_transport_place_button"
                style="@style/buttonStyle"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/metro_transport_place_button"
                android:layout_marginTop="90dp"
                android:onClick="saveBusClicked"
                android:text="@string/bus_transport_button_text" />

            <Button
                android:id="@+id/train_transport_place_button"
                style="@style/buttonStyle"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bus_transport_place_button"
                android:layout_marginTop="90dp"
                android:onClick="saveTrainClicked"
                android:text="@string/train_transport_button_text" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>