<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_announce"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".lost2foundUI.placeUI.transportUI.FillTransportPlaceActivity"
        tools:showIn="@layout/activity_fill_transport_place"
        android:background="@color/colorSecondaryText">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_center"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/newannounce_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar_center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/listLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:hint="@string/spinner4_placeholder"

                android:textColorHint="@color/colorPrimaryText"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/listStations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:layout_below="@+id/listLines"
                android:layout_marginTop="8dp"
                android:hint="@string/spinner5_placeholder"
                android:textColorHint="@color/colorPrimaryText"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/confirm_button"
                style="@style/buttonStyle"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="34dp"
                android:onClick="saveTransportPlaceData"
                android:text="@string/confirm_button_text" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>