<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_announce"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryText"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".lost2foundUI.announceUI.NewAnnounceActivity"
        tools:showIn="@layout/activity_new_announce">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/newannounce_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar_center"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="81dp"
                android:hint="@string/name_text"
                android:inputType="text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/name"
                android:layout_marginTop="61dp"
                android:hint="@string/description_text"
                android:inputType="text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wrong_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/create_button"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="60dp"
                android:paddingTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/errorColor" />

            <Button
                android:id="@+id/create_button"
                style="@style/buttonStyle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="12dp"
                android:onClick="saveData"
                android:text="@string/create_button_text" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>