<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingTop="16dp"
    android:theme="@style/Lost2FoundTheme"
    tools:context="es.lost2found.homeUI.HomeActivity">

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/announce_title"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="120dp"
            android:layout_width="125dp"
            android:layout_centerHorizontal="true"
            android:layout_height="30dp"
            android:text="@string/title_announce_section"
            android:textSize="20dp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/announce_layout"
        android:layout_width="fill_parent"
        android:layout_below="@id/announce_title"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/announce_icon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="6dip"
            android:src="@drawable/ic_phone_android"
            />

        <TextView
            android:id="@+id/firstLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/secondLine"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toRightOf="@id/announce_icon"
            android:gravity="center_vertical"
            android:text="Anuncio pérdida"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secondLine"
            android:layout_width="fill_parent"
            android:layout_height="26dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/announce_icon"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="Móvil android"
            android:textSize="12sp" />

    </RelativeLayout>

        <Button
            android:id="@+id/create_announce_button"
            android:layout_marginTop="12dp"
            android:text="@string/create_announce_text"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/announce_layout"
            style="@style/buttonStyle"
             />
         <!--android:onClick="register"-->

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_marginTop="16dp"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigate_menu"
        app:headerLayout="@layout/nav_header"
        />

</android.support.v4.widget.DrawerLayout>